--- a/css/style.css
+++ b/css/style.css
@@ -43,12 +43,14 @@ body {
   line-height: 2em;
 }
 
-a {
+/*---Общие стили---*/
+
+.main-header a,
+.popular-list a,
+.catalog a {
   color: #000000;
   text-decoration: none;
 }
-
-/*---Общие стили---*/
 
 .container {
   width: 1160px;
@@ -123,6 +125,7 @@ a {
   letter-spacing: 3.6px;
   text-transform: uppercase;
   line-height: 2.15em;
+  text-decoration: none;
   color: #000000;
   z-index: 1;
   cursor: pointer;
@@ -378,7 +381,7 @@ a {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   width: 1160px;
-  min-height: 140px;
+  min-height: 135px;
   margin: 0;
   padding: 0;
   padding-top: 20px;
@@ -483,6 +486,7 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
 }
 
 .product-slide .image-wrapper {
@@ -504,9 +508,10 @@ a {
   -ms-flex-preferred-size: 520px;
       flex-basis: 520px;
   margin-right: auto;
+  z-index: 20;
 }
 
-.product-slide svg {
+.product-slide .rect {
   margin-top: 38px;
   margin-bottom: 27px;
 }
@@ -517,22 +522,12 @@ a {
   margin-bottom: 44px;
 }
 
-.product-slide.slide-1 {
-  background-image: url(../img/01.svg);
-  background-position: 934px 10px;
-  background-repeat: no-repeat;
-}
-
-.product-slide.slide-2 {
-  background-image: url(../img/02.svg);
-  background-position: 909px 10px;
-  background-repeat: no-repeat;
-}
-
-.product-slide.slide-3 {
-  background-image: url(../img/03.svg);
-  background-position: 908px 10px;
-  background-repeat: no-repeat;
+.product-slide.slide-1 .o1,
+.product-slide.slide-2 .o2,
+.product-slide.slide-3 .o3 {
+  position: absolute;
+  right: 60px;
+  top: 13px;
 }
 
 .basic-features {
@@ -573,7 +568,7 @@ a {
   display: flex;
   right: 90px;
   bottom: 145px;
-  z-index: 10;
+  z-index: 50;
 }
 
 .product-slider-switch label {
@@ -592,19 +587,19 @@ a {
   margin-right: 12px;
 }
 
-#product-2:checked ~ ol .product-slide {
+.product-2:checked ~ ol .product-slide {
   -webkit-transform: translateX(-1160px);
           transform: translateX(-1160px);
 }
 
-#product-3:checked ~ ol .product-slide {
+.product-3:checked ~ ol .product-slide {
   -webkit-transform: translateX(-2320px);
           transform: translateX(-2320px);
 }
 
-#product-1:checked ~ .product-slider-switch label[for="product-1"]::before,
-#product-2:checked ~ .product-slider-switch label[for="product-2"]::before,
-#product-3:checked ~ .product-slider-switch label[for="product-3"]::before {
+.product-1:checked ~ .product-slider-switch label[for="product-1"]::before,
+.product-2:checked ~ .product-slider-switch label[for="product-2"]::before,
+.product-3:checked ~ .product-slider-switch label[for="product-3"]::before {
   position: absolute;
   content: "";
   width: 12px;
@@ -613,9 +608,9 @@ a {
   background-size: 12px 12px;
 }
 
-#product-1:focus ~ .product-slider-switch label[for="product-1"],
-#product-2:focus ~ .product-slider-switch label[for="product-2"],
-#product-3:focus ~ .product-slider-switch label[for="product-3"] {
+.product-1:focus ~ .product-slider-switch label[for="product-1"],
+.product-2:focus ~ .product-slider-switch label[for="product-2"],
+.product-3:focus ~ .product-slider-switch label[for="product-3"] {
   outline: 1px dotted #000000;
 }
 
@@ -662,7 +657,7 @@ a {
 
 .popular-list a::before {
   background-color: #f7e296;
-  z-index: -2;
+  z-index: -5;
 }
 
 .popular-vr::after {
@@ -778,15 +773,15 @@ a {
 
 /*---Переключение слайдов---*/
 
-#service-1:checked ~ .flex-wrapper label[for="service-1"],
-#service-2:checked ~ .flex-wrapper label[for="service-2"],
-#service-3:checked ~ .flex-wrapper label[for="service-3"] {
+.service-1:checked ~ .flex-wrapper label[for="service-1"],
+.service-2:checked ~ .flex-wrapper label[for="service-2"],
+.service-3:checked ~ .flex-wrapper label[for="service-3"] {
   color: #f7e184;
 }
 
-#service-1:checked ~ .flex-wrapper label[for="service-1"]::before,
-#service-2:checked ~ .flex-wrapper label[for="service-2"]::before,
-#service-3:checked ~ .flex-wrapper label[for="service-3"]::before {
+.service-1:checked ~ .flex-wrapper label[for="service-1"]::before,
+.service-2:checked ~ .flex-wrapper label[for="service-2"]::before,
+.service-3:checked ~ .flex-wrapper label[for="service-3"]::before {
   content: "";
   position: absolute;
   width: 278px;
@@ -803,9 +798,9 @@ a {
   display: none;
 }
 
-#service-1:checked ~ .flex-wrapper .delivery,
-#service-2:checked ~ .flex-wrapper .warranty,
-#service-3:checked ~ .flex-wrapper .credit {
+.service-1:checked ~ .flex-wrapper .delivery,
+.service-2:checked ~ .flex-wrapper .warranty,
+.service-3:checked ~ .flex-wrapper .credit {
   display: block;
 }
 
@@ -908,9 +903,18 @@ a {
   letter-spacing: 0.005em;
 }
 
+.contacts .small-map {
+  position: relative;
+  margin-bottom: 58px;
+}
+
 .contacts .map-open {
+  position: absolute;
   display: block;
-  margin-bottom: 67px;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 0;
   line-height: 0;
 }
 
@@ -1301,11 +1305,11 @@ a {
   background-image: linear-gradient(to bottom, #000000 2px, transparent 2px);
 }
 
-.catalog-filter fieldset.price {
+fieldset.price {
   margin-bottom: 40px;
 }
 
-.catalog-filter fieldset.price legend {
+fieldset.price legend {
   padding-bottom: 34px;
 }
 
@@ -1462,6 +1466,7 @@ a {
   -webkit-box-direction: reverse;
       -ms-flex-direction: column-reverse;
           flex-direction: column-reverse;
+  justify-content: flex-end;
 }
 
 .catalog-item .flex-wrapper {
@@ -1556,12 +1561,12 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0;
   padding: 0;
-  margin-top: -15px;
+  margin-top: -13px;
   margin-bottom: 74px;
   background-color: #eeeeee;
   list-style: none;
@@ -1573,7 +1578,7 @@ a {
   display: flex;
   margin: 0;
   padding: 0;
-  padding-left: 15px;
+  padding-left: 10px;
   list-style: none;
   letter-spacing: normal;
 }
@@ -1598,7 +1603,8 @@ a {
 
 .catalog-paginator a.previous,
 .catalog-paginator a.next {
-  display: block;
+  display: inline-block;
+  vertical-align: middle;
   padding: 23px 30px 18px;
 }
 
@@ -1654,6 +1660,7 @@ a {
 
 .main-footer a {
   color: #ffffff;
+  text-decoration: none;
 }
 
 .main-footer p {
