--- a/css/style.css
+++ b/css/style.css
@@ -483,9 +483,7 @@ body {
       flex-shrink: 0;
   -ms-flex-preferred-size: 1160px;
       flex-basis: 1160px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   position: relative;
 }
 
@@ -587,14 +585,12 @@ body {
   margin-right: 12px;
 }
 
-.product-2:checked ~ ol .product-slide {
-  -webkit-transform: translateX(-1160px);
-          transform: translateX(-1160px);
-}
-
-.product-3:checked ~ ol .product-slide {
-  -webkit-transform: translateX(-2320px);
-          transform: translateX(-2320px);
+.product-1:checked ~ ol .slide-1,
+.product-2:checked ~ ol .slide-2,
+.product-3:checked ~ ol .slide-3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .product-1:checked ~ .product-slider-switch label[for="product-1"]::before,
